--- a/SupermercatsItteria/pom.xml
+++ b/SupermercatsItteria/pom.xml
@@ -24,6 +24,12 @@
 			<artifactId>catalina</artifactId>
 			<version>6.0.39</version>
 		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
