Validacio Usuari Ok

--- a/SupermercatsItteria/src/main/java/propietats/user.properties
+++ b/SupermercatsItteria/src/main/java/propietats/user.properties
@@ -10,6 +10,9 @@ label.user.compteb= Compteb
  
 label.user.button.submit = Submit
 
+label.user.button.si= Si
+label.user.button.no=No
+
 label.user.usuari= usuari
 label.user.clau= clau
 
