--- a/SupermercatsItteria/pom.xml
+++ b/SupermercatsItteria/pom.xml
@@ -20,10 +20,19 @@
 			<version>1.2.8</version>
 		</dependency>
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.29</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>catalina</artifactId>
 			<version>6.0.39</version>
+			<scope>provided</scope>
 		</dependency>
+
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
