--- a/SupermercatsItteria/src/main/webapp/WEB-INF/web.xml
+++ b/SupermercatsItteria/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
-  <!-- Standard Action Servlet Configuration -->
+	<!-- Standard Action Servlet Configuration -->
 
 	<servlet>
 
@@ -33,9 +33,9 @@
 
 	</servlet>
 
- 
 
-<!-- Standard Action Servlet Mapping -->
+
+	<!-- Standard Action Servlet Mapping -->
 
 	<servlet-mapping>
 
@@ -44,4 +44,10 @@
 		<url-pattern>*.do</url-pattern>
 
 	</servlet-mapping>
+	<resource-ref>
+		<description>MySQLconnection</description>
+		<res-ref-name>jdbc/botiga</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
