--- a/SupermercatsItteria/src/main/java/propietats/user.properties
+++ b/SupermercatsItteria/src/main/java/propietats/user.properties
@@ -42,3 +42,12 @@ err.user.email.invalid =  Email address is invalid.<br/>
 
 err.user.usuari.required = User is required.<br/>
 err.user.clau.required = Password is required.<br/>
+label.usertarjeta = Introdueix el Número de tarjeta:   
+label.useradreça = Introdueix la teva adreça:   
+label.welcome = Gracies per la seva compra
+ 
+error.usertarjeta =Tarjeta no introduida.
+error.tamany.tarjeta= La tarjeta ha de tenir 16 digits.
+error.useradreça =Adreça no introduida.
+
+err.user.username.required = El camp es obligatori.
