--- a/SupermercatsItteria/pom.xml
+++ b/SupermercatsItteria/pom.xml
@@ -15,6 +15,13 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>5.0.6</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>struts</groupId>
 			<artifactId>struts</artifactId>
 			<version>1.2.8</version>
