Acabades parts de confirmacio de registre i de ocmpra amb pdf falten modificacions cataleg

--- a/SupermercatsItteria/src/main/java/propietats/user.properties
+++ b/SupermercatsItteria/src/main/java/propietats/user.properties
@@ -8,6 +8,9 @@ label.user.email = Email
 label.user.telephone= Telephone
 label.user.compteb= Compteb
  
+ 
+label.user.button.si = SI
+label.user.button.no = NO
 label.user.button.submit = Submit
 
 label.user.usuari= usuari
